# Calculator

./: README.md  pyproject.toml
calculator/: .coverage  main.py  pyproject.toml  tasks.py
calculator/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
calculator/htmlcov/: d_08b4cb1648a15a99___init___py.html  d_08b4cb1648a15a99_calculator_test_py.html  d_145eef247bfb46b6_calculator_py.html  index.html  status.json
calculator/src/: calculator.py
calculator/src/application/: calculator_app.py
calculator/src/calc/: calculator.py  calculator_app.py
calculator/src/tests/: calculator_app_test.py  calculator_test.py
laskarit/poetry_testi/: pyproject.toml
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/: .coverage
laskarit/viikko2/unicafe/htmlcov/: .gitignore  d_145eef247bfb46b6_kassapaate_py.html  d_145eef247bfb46b6_maksukortti_py.html  index.html  status.json
laskarit/viikko2/unicafe/src/tests/: .coverage  kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  sekvenssi1.md  sekvenssi2.md
