[tool.poetry]
name = "poetry-testi"
version = "0.1.0"
description = ""
authors = ["Inkeri Ahlström <inkeri.ahlstrom@helsinki.fi>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
cowsay = "^5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
